Closed Bug 1719346 Opened 4 years ago Closed 4 years ago

Accessing any object three times using JavaScript causes sliced image borders based on .gif files to become invisible, until the user scrolls the page

Categories

(Core :: Graphics: WebRender, defect, P3)

Firefox 89
defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- fixed
firefox90 --- wontfix
firefox91 --- wontfix
firefox92 --- fixed

People

(Reporter: bugzilla, Assigned: mikokm)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file testcase

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

  1. Unzip borderbug.zip into a folder, and open the included repro.html file by double-clicking it, and opening it with Firefox.
  2. Periodically scroll around the page.
  3. Open the repro.html file in a text editor, and replace the string 'border.gif' on line 6 with 'border.png'
  4. Reload the page by pressing f5
  5. Periodically scroll around the page.

Actual results:

On step 2, the border of the Lorem Ipsum textblock disappears when the user has not scrolled in a few frames of the text moving up the screen.
On step 5, the border of the Lorem Ipsum textblock stays on screen.

Expected results:

The border of the Lorem Ipsum textblock stays visible while the page is open on both steps 2 and 5.

A few notes:

  • This bug didn't seem to be a problem a few days ago. Unfortunately, I didn't get the regression to work, but I can only assume it's a bug introduced this week.
  • This bug also appeared on mobile. I'm not too familiar with the internal details of the browser, but I can only assume it's caused by rendering code that is shared between mobile and desktop versions of Firefox.
  • The fact that it only happens to image borders with an image of the .gif type, hints towards the fact that it has to do with the rendering of .gif animations, although there is no animation present in the supplied border.gif file.

The Bugbug bot thinks this bug should belong to the 'Core::Panning and Zooming' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Panning and Zooming
Product: Firefox → Core
Component: Panning and Zooming → Graphics

Seems to be a webrender specific bug.

Hmm, I get this regression range with webrender preffed on

https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=737aba43bfa1685fa15a9b542636b959397603a8&tochange=018964cefa63a14d1e43b31be1b91526a9d708fc

Not sure what in there might be it.

Status: UNCONFIRMED → NEW
Component: Graphics → Graphics: WebRender
Ever confirmed: true

I think is from bug 1616412. Setting gfx.webrender.enable-item-cache to false seems to fix it.

Flags: needinfo?(mikokm)
Regressed by: 1616412
Has Regression Range: --- → yes
Severity: -- → S3
Priority: -- → P3
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch

Please nominate this for ESR91 approval when you get a chance.

Flags: needinfo?(mikokm)

Comment on attachment 9233359 [details]
Bug 1719346 - Do not cache borders r=jrmuizel

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Border display item caching is broken for image borders
  • User impact if declined: Border elements might be missing from the page if there are dynamic updates
  • Fix Landed on Version: 92.0a1
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): A simple patch that turns off less frequently used, buggy code path.
  • String or UUID changes made by this patch:
Flags: needinfo?(mikokm)
Attachment #9233359 - Flags: approval-mozilla-esr91?

Comment on attachment 9233359 [details]
Bug 1719346 - Do not cache borders r=jrmuizel

Approved for 91.1esr.

Attachment #9233359 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: