Bug 1719346 - Do not cache borders r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D121000